--- a/corporate2/devel/system/base/module-init-tools/files/modprobe.conf
+++ b/corporate2/devel/system/base/module-init-tools/files/modprobe.conf
@@ -164,3 +164,7 @@ install eth1394 /bin/true
 install snd-emu10k1 /sbin/modprobe --ignore-install snd-emu10k1 && /sbin/modprobe snd-emu10k1-synth
 
 install parport /sbin/modprobe -i parport; /sbin/modprobe lp; /sbin/modprobe ppdev
+
+# This should be passed in here as sysctl doesn't
+# affect module probes.
+options nf_conntrack acct=1
